--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
 	"fastmcp>=3.0.0b1",
-    "sans-fitter",
+    "sans-fitter>=0.0.3",
     "kaleido>=1.2.0",
 ]
 
